# Laboratorio-de-Datos

./: README.md  Visualizacion_embalses.ipynb  readme.md  stop_words_spanish.txt
Data Science/: readme.md
Data Science/Agente Conversacional con MCP server/: README.md  notebook.ipynb
Data Science/Aplicación Streamlit de chat con datos abiertos/: Notebook.ipynb  README.md  constantes.py  datasets  requirements.txt
Data Science/Aplicación práctica de técnicas de anonimización/: readme.md
Data Science/Asistente Experto sobre Minerales Críticos/: README.md
Data Science/Creando un agente conversacional basado en RAG/: README.md
Data Science/Generación de informes con Langgraph e IA/: AGENTE_ENTREVISTAS.ipynb  README.md
Data Science/Guía Análisis Exploratorio de Datos en Python/: NOTEBOOK_EDA.ipynb
Data Science/Guía Práctica de Introducción al Análisis Exploratorio de Datos/: Readme.md
Data Science/Guía práctica para la publicación de datos enlazados en RDF/: LICENSE  readme.md
Data Science/Modelando el Presupuesto de Subvenciones: Una Experiencia Práctica con Apache Spark/: README.md
Data Science/Regresión Lineal Múltiple: Análisis de Calidad del Aire en Castilla y León/: README.md  notebook.ipynb
Data Science/Ruta a la electrificación de la Movilidad/: README.md
Data Science/mi_carpeta/unity_catalog/: archivo.txt  pyproject.toml
Data Science/mi_carpeta/unity_catalog/bdns_downloader/: __init__.py  config.py  detalle.py  indice.py
Data Sciente/: readme.md
Informes/: readme.md
Post/: Readme.md
Visualizaciones/: Readme.md  readme.dm  readme.md
(+279 files in other folders)
