[project]
name = "bdns_downloader"
version = "0.1.0"
description = "Descarga reanudable de convocatorias BDNS (índice + detalle rotativo)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "aiohttp",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"